<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <!--    Here I am using a LinearLayout as it is a very simple design-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="@dimen/normal_padding"
        tools:context=".welcome.WelcomeFragment">

        <TextView
            android:text="@string/welcome_text"
            android:lineSpacingMultiplier="1.4"
            style="@style/BlackText" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            android:lineSpacingMultiplier="1.4"
            android:text="@string/lorem" />

        <Button
            android:id="@+id/btnNextWelcome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/next"
            style="@style/PrimaryButton" />

    </LinearLayout>
</layout>