<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/normal_padding"
            tools:context=".instructions.InstructionsFragment">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:text="@string/instructions_title"
                android:textColor="@android:color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                style="@style/BlackText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:lineSpacingMultiplier="1.4"
                android:layout_marginBottom="@dimen/margin_normal"
                android:text="@string/instructions_of_the_app" />

            <Button
                android:id="@+id/btnNextInstructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/next"
                style="@style/PrimaryButton"/>

        </LinearLayout>
    </ScrollView>
</layout>