<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<!--
    I decided to use the ConstraintLayout, since I needed a somewhat
    complicated design to develop with the LinearLayot, to be able to make
    the design that I currently have with the LinearLayout I had to put one GroupView
    inside another and that is not very good practice. Here with the help of a Guideline
    I was able to do it very easily.
-->

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/normal_padding">

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintGuide_percent="0.3"
                />

            <TextView
                android:id="@+id/tvTitle"
                style="@style/BlackText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_new_shoe"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/name"
                style="@style/BlackText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/etNameShoes"
                app:layout_constraintEnd_toStartOf="@id/guideline"/>

            <EditText
                android:id="@+id/etNameShoes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:hint="@string/name"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/tvTitle" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/company"
                style="@style/BlackText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/etCompany"
                app:layout_constraintEnd_toStartOf="@id/guideline"/>

            <EditText
                android:id="@+id/etCompany"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:hint="@string/company"
                android:inputType="textPersonName"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/etNameShoes" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/shoes_size"
                style="@style/BlackText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/etShoesSize"
                app:layout_constraintEnd_toStartOf="@id/guideline"/>

            <EditText
                android:id="@+id/etShoesSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:hint="@string/shoes_size"
                android:inputType="number"
                app:layout_constraintEnd_toEndOf="@id/etNameShoes"
                app:layout_constraintStart_toStartOf="@id/etNameShoes"
                app:layout_constraintTop_toBottomOf="@+id/etCompany" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                style="@style/BlackText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBaseline_toBaselineOf="@id/etShoesDescription"
                app:layout_constraintEnd_toStartOf="@id/guideline"/>

            <EditText
                android:id="@+id/etShoesDescription"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_min"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                app:layout_constraintEnd_toEndOf="@id/etNameShoes"
                app:layout_constraintStart_toStartOf="@id/etNameShoes"
                app:layout_constraintTop_toBottomOf="@+id/etShoesSize" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_green_dark"
                android:text="@string/save"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toStartOf="@+id/btnCancel"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/etShoesDescription" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@android:color/holo_red_dark"
                android:text="@string/cancel"
                android:textColor="@android:color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btnSave"
                app:layout_constraintTop_toBottomOf="@id/etShoesDescription" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>